# moltis

./: CHANGELOG.md  Cargo.toml  changelog.html  configuration.html  justfile  print.html  sandbox.html  searchindex.js  toc.html  toc.js
.github/workflows/: release.yml
crates/channels/src/: plugin.rs
crates/chat/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/config/src/: lib.rs  schema.rs  template.rs  validate.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: server.rs  services.rs  update_check.rs
crates/gateway/src/methods/: services.rs
crates/httpd/: Cargo.toml
crates/httpd/src/: lib.rs  server.rs
crates/matrix/: Cargo.toml
crates/matrix/src/: access.rs  config.rs  error.rs  handler.rs  lib.rs  outbound.rs  plugin.rs  state.rs
crates/memory/src/: writer.rs
crates/oauth/src/: defaults.rs
crates/providers/src/: gemini.rs  gemini_oauth.rs  lib.rs
crates/swift-bridge/: Cargo.toml
crates/swift-bridge/src/: lib.rs
crates/web/: Cargo.toml
crates/web/src/: api.rs  gon.rs  lib.rs  spa.rs  templates.rs
crates/web/src/assets/js/: page-channels.js  page-settings.js
crates/web/ui/: build.sh  playwright.config.js
crates/web/ui/e2e/: base-test.js  mock-oauth-server.js
crates/web/ui/e2e/specs/: agents.spec.js  auth.spec.js  chat-abort.spec.js  chat-input.spec.js  code-highlight.spec.js  cron.spec.js  mcp.spec.js  monitoring.spec.js  oauth.spec.js  onboarding-auth.spec.js  onboarding-openai.spec.js  onboarding.spec.js  providers.spec.js  run-detail.spec.js  sandboxes.spec.js  sessions.spec.js  settings-nav.spec.js  websocket.spec.js
docs/src/: SUMMARY.md  providers.md
scripts/: generate-ios-project.sh  local-validate.sh
