[package]
edition.workspace    = true
name                 = "moltis-httpd"
repository.workspace = true
version.workspace    = true

[dependencies]
moltis-gateway = { workspace = true }

[features]
default = [
  "graphql",
  "metrics",
  "prometheus",
  "push-notifications",
  "slack",
  "tailscale",
  "tls",
  "trusted-network",
  "vault",
  "web-ui",
]
graphql = ["moltis-gateway/graphql"]
metrics = ["moltis-gateway/metrics"]
prometheus = ["metrics", "moltis-gateway/prometheus"]
push-notifications = ["moltis-gateway/push-notifications"]
slack = ["moltis-gateway/slack"]
tailscale = ["moltis-gateway/tailscale"]
tls = ["moltis-gateway/tls"]
trusted-network = ["moltis-gateway/trusted-network"]
vault = ["moltis-gateway/vault"]
web-ui = ["moltis-gateway/web-ui"]

[lints]
workspace = true
